--- a/shakwy.html
+++ b/shakwy.html
@@ -146,7 +146,7 @@
   <input type="text" id="name" name="name" placeholder="اكتب اسمك" required />
 
   <label for="phone">رقم التليفون</label>
-  <input type="tel" id="phone" name="phone" placeholder="مثال: 01012345678" pattern="0[0-11]{11}" required />
+  <input type="tel" id="phone" name="phone" placeholder="مثال: 01012345678" pattern="^(01[0125])[0-9]{8}$" required />
 
   <label for="complaint">نص الشكوى</label>
   <textarea id="complaint" name="complaint" placeholder="اكتب شكوتك هنا..." required></textarea>
@@ -164,6 +164,13 @@
 
     if(!name || !phone || !complaint){
       alert('من فضلك أكمل جميع الحقول');
+      return;
+    }
+
+    // تحقق من تطابق الرقم مع الـ pattern (للتأكيد عند الإرسال)
+    const phonePattern = /^(01[0125])[0-9]{8}$/;
+    if(!phonePattern.test(phone)){
+      alert('من فضلك أدخل رقم موبايل مصري صحيح يبدأ بـ 010 أو 011 أو 012 أو 015 ويكون 11 رقم.');
       return;
     }
 
