--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     body, html {
       margin: 0; padding: 0;
       font-family: 'Cairo', sans-serif;
-      background: black;
-      color: white;
-      height: 100vh;
+      background: white;
+      color: #111;
+      min-height: 100vh;
       overflow-x: hidden;
       scroll-behavior: smooth;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start; /* فوق */
+      align-items: center;
     }
     #preloader {
       position: fixed;
@@ -29,187 +29,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-    video {
-      position: fixed;
-      top: 50%; /* مركّز على الشخص في المنتصف */
-      left: 50%;
-      width: auto;
-      height: 110vh; 
-      min-width: 100vw;
-      min-height: 100vh;
-      object-fit: cover;
-      transform: translate(-50%, -50%);
-      z-index: -1;
-      background: black;
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
-    #mainCard {
-      backdrop-filter: blur(16px);
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 22px;
-      padding: 20px 24px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.4);
-      color: white;
-      text-align: center;
-      opacity: 0;
-      transform: translateY(100px);
-      animation: slideUp 1.5s forwards ease-out;
-      cursor: default;
-      max-width: 320px;
-      margin: 220px auto 20px; /* نزلت البطاقة تحت عشان الشخص يبان فوق */
-      font-size: 22px;
-      font-weight: 900;
-      user-select: none;
-      position: relative;
-      z-index: 10;
-    }
-    #mainCard > div:last-child {
-      font-size: 16px;
-      font-weight: 700;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 6px;
-      flex-wrap: wrap;
-      color: #e0ffe0;
-    }
-    @keyframes slideUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes bounceDown {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(5px); }
-    }
-    .point-down {
-      display: inline-block;
-      animation: bounceDown 1.8s infinite;
-    }
-    .social-section {
-      padding: 40px 16px 40px;
-      display: flex;
-      flex-direction: column;
-      gap: 18px;
-      max-width: 480px;
-      margin: 0 auto 70px;
-      width: 90%;
-      box-sizing: border-box;
-      position: relative;
-      z-index: 10;
-    }
-    .social-card {
-      backdrop-filter: blur(12px);
-      border-radius: 18px;
-      padding: 20px 14px;
-      text-align: center;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
-      border: 1.5px solid #ccc;
-      opacity: 0;
-      animation: fadeInUp 0.8s forwards;
-      transition: all 0.3s ease;
-      cursor: pointer;
-      background: rgba(255, 255, 255, 0.95);
-      color: #111 !important;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-    }
-    .social-card a {
-      color: #000 !important;
-      text-decoration: none;
-      flex: 1;
-      text-align: right;
-      display: block;
-    }
-    .social-card img {
-      width: 60px;
-      height: 60px;
-      object-fit: contain;
-      border-radius: 50%;
-      background: white;
-      padding: 8px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.15);
-      flex-shrink: 0;
-    }
-    .social-card h3 {
-      margin: 0;
-      font-size: 18px;
-      font-weight: 800;
-      color: #111;
-    }
-    .social-card p {
-      font-size: 13px;
-      margin-top: 4px;
-      color: #333;
-      line-height: 1.3;
-    }
-    .social-card.clicked {
-      animation: clickedEffect 0.5s;
-    }
-    .social-card:hover {
-      background-color: rgba(0, 255, 0, 0.15);
-      transform: scale(1.04);
-      box-shadow: 0 10px 30px rgba(0, 255, 0, 0.4);
-    }
-    .start-card {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px 16px 60px;
-      max-width: 480px;
-      margin: 0 auto 20px;
-      width: 90%;
-      box-sizing: border-box;
-      position: relative;
-      z-index: 10;
-    }
-    .start-card-inner {
-      background: linear-gradient(135deg, #00c9ff, #92fe9d);
-      color: #000;
-      border-radius: 20px;
-      padding: 22px 30px;
-      box-shadow: 0 8px 26px rgba(0, 0, 0, 0.35);
-      font-size: 22px;
-      font-weight: 900;
-      text-align: center;
-      animation: zoomRotate 1s ease forwards;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transform: scale(0.7) rotate(-10deg);
-      opacity: 0;
-      font-family: 'Cairo', sans-serif;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.3s ease;
-      user-select: none;
-    }
-    .start-card-inner:hover {
-      background: linear-gradient(135deg, #00e676, #66ffa6);
-      transform: scale(1.1);
-      box-shadow: 0 12px 40px rgba(0, 230, 118, 0.6);
-    }
-    @keyframes zoomRotate {
-      to {
-        transform: scale(1) rotate(0deg);
-        opacity: 1;
-      }
-    }
-    @keyframes rocket {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
-    }
-    .start-card-inner > div:first-child {
-      font-size: 40px;
-      animation: rocket 1.5s infinite;
-    }
-    @keyframes clickedEffect {
-      0% { transform: scale(1); background-color: rgba(0, 255, 0, 0.2); }
-      50% { transform: scale(0.96); }
-      100% { transform: scale(1); background-color: transparent; }
     }
     @keyframes fadeInUp {
       from {
@@ -226,51 +45,182 @@
       transform: scale(0.98);
       transition: opacity 0.5s ease, transform 0.5s ease;
     }
+    /* كارت الفيديو الوجهي */
+    #videoCard {
+      margin-top: 40px;
+      width: 320px;
+      max-width: 90vw;
+      background: #f0f0f0;
+      border-radius: 20px;
+      box-shadow: 0 8px 26px rgba(0,0,0,0.1);
+      overflow: hidden;
+      position: relative;
+      animation: fadeInUp 1s ease forwards;
+    }
+    #videoCard video {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 20px 20px 0 0;
+      background: black;
+    }
+    #videoCard .card-content {
+      padding: 18px 20px;
+      text-align: center;
+      font-weight: 800;
+      font-size: 22px;
+      color: #222;
+      user-select: none;
+    }
+    #mainCard {
+      margin: 30px auto 15px;
+      max-width: 320px;
+      text-align: center;
+      font-size: 22px;
+      font-weight: 900;
+      color: #222;
+      user-select: none;
+      animation: fadeInUp 1.2s ease forwards;
+    }
+    #mainCard > div:last-child {
+      font-size: 16px;
+      font-weight: 700;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 6px;
+      flex-wrap: wrap;
+      color: #4caf50;
+    }
+    .point-down {
+      display: inline-block;
+      animation: bounceDown 1.8s infinite;
+      color: #4caf50;
+      font-size: 18px;
+    }
+    @keyframes bounceDown {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(5px); }
+    }
+    .social-section {
+      padding: 20px 16px 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      max-width: 480px;
+      margin: 0 auto 40px;
+      width: 90%;
+      box-sizing: border-box;
+    }
+    .social-card {
+      background: white;
+      border-radius: 18px;
+      padding: 16px 14px;
+      text-align: right;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+      border: 1.5px solid #ddd;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .social-card:hover {
+      transform: scale(1.04);
+      box-shadow: 0 10px 30px rgba(76,175,80,0.3);
+      border-color: #4caf50;
+    }
+    .social-card a {
+      color: #111;
+      text-decoration: none;
+      flex: 1;
+      display: block;
+    }
+    .social-card img {
+      width: 56px;
+      height: 56px;
+      object-fit: contain;
+      border-radius: 50%;
+      background: white;
+      padding: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.12);
+      flex-shrink: 0;
+    }
+    .social-card h3 {
+      margin: 0;
+      font-size: 17px;
+      font-weight: 700;
+      color: #333;
+    }
+    .social-card p {
+      margin: 2px 0 0 0;
+      font-size: 13px;
+      color: #666;
+      line-height: 1.3;
+    }
+    .start-card {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 50px;
+      max-width: 320px;
+      width: 90%;
+    }
+    .start-card-inner {
+      background: linear-gradient(135deg, #4caf50, #81c784);
+      color: white;
+      border-radius: 22px;
+      padding: 20px 28px;
+      box-shadow: 0 8px 24px rgba(76,175,80,0.5);
+      font-size: 22px;
+      font-weight: 900;
+      text-align: center;
+      cursor: pointer;
+      user-select: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: background 0.3s ease, transform 0.3s ease;
+    }
+    .start-card-inner:hover {
+      background: linear-gradient(135deg, #66bb6a, #a5d6a7);
+      transform: scale(1.07);
+      box-shadow: 0 12px 40px rgba(76,175,80,0.7);
+    }
+    .start-card-inner > div:first-child {
+      font-size: 40px;
+      animation: rocket 1.5s infinite;
+      margin-bottom: 6px;
+    }
+    @keyframes rocket {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-6px); }
+    }
     footer {
       width: 100%;
       padding: 12px 8px;
       text-align: center;
       font-size: 11px;
-      color: #aaa;
-      background: rgba(0,0,0,0.6);
+      color: #999;
+      background: #f9f9f9;
       user-select: none;
-      font-weight: 500;
+      font-weight: 600;
       font-family: 'Cairo', sans-serif;
-      box-shadow: inset 0 1px 2px rgba(255,255,255,0.05);
-      position: relative;
-      z-index: 10;
+      box-shadow: inset 0 1px 2px rgba(0,0,0,0.05);
     }
     footer span {
       font-style: italic;
-      font-weight: 600;
-      color: #6cff87;
+      color: #4caf50;
+      font-weight: 700;
     }
-    @media (min-width: 480px) {
-      .social-card {
-        padding: 22px 20px;
-        border-radius: 24px;
-        gap: 24px;
-      }
-      .social-card img {
-        width: 70px;
-        height: 70px;
-        padding: 10px;
-      }
-      .social-card h3 {
-        font-size: 20px;
-      }
-      .social-card p {
-        font-size: 14px;
-      }
-      .start-card-inner {
-        font-size: 26px;
-        padding: 26px 40px;
-      }
-      #mainCard {
-        max-width: 360px;
-        font-size: 26px;
-        padding: 28px 32px;
-      }
+    /* Accessibility focus */
+    .social-card:focus {
+      outline: 3px solid #4caf50;
+      outline-offset: 2px;
+    }
+    .start-card-inner:focus {
+      outline: 3px solid #4caf50;
+      outline-offset: 3px;
     }
   </style>
 </head>
@@ -288,12 +238,16 @@
     </dotlottie-wc>
   </div>
 
-  <!-- فيديو الخلفية -->
-  <video id="bgVideo" autoplay muted loop playsinline>
-    <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4" />
-  </video>
+  <!-- كارت الفيديو -->
+  <section id="videoCard" aria-label="فيديو تعريفي">
+    <video id="introVideo" autoplay muted loop playsinline>
+      <source src="https://files.catbox.moe/1dldfl.mp4" type="video/mp4" />
+      متصفحك لا يدعم عرض الفيديو.
+    </video>
+    <div class="card-content">مرحباً بك في عالم مستر فيصل</div>
+  </section>
 
-  <!-- البطاقة الرئيسية -->
+  <!-- بطاقة انضم لينا -->
   <div id="mainCard" role="region" aria-label="انضم لينا">
     <div>انضم لينا</div>
     <div>
@@ -360,7 +314,7 @@
 
   <script>
     const preloader = document.getElementById('preloader');
-    const video = document.getElementById('bgVideo');
+    const introVideo = document.getElementById('introVideo');
     const mainCard = document.getElementById('mainCard');
     const startCard = document.querySelector('.start-card');
     const socialCards = document.querySelectorAll('.social-card');
@@ -370,8 +324,7 @@
       startCard.style.opacity = 0;
       socialCards.forEach(card => card.style.opacity = 0);
 
-      video.addEventListener('canplay', () => {
-        video.style.opacity = 1;
+      introVideo.addEventListener('canplay', () => {
         preloader.style.transition = 'opacity 0.8s ease';
         preloader.style.opacity = 0;
         setTimeout(() => {
